Releases: Fix border on small screens - #733

--- a/github-dark.css
+++ b/github-dark.css
@@ -497,40 +497,6 @@
   .project-column:focus, .project-card:focus, .TenYearNav-year.blue {
     border-color: /*[[base-color]]*/ #4183c4 !important;
   }
-  /* auto-generated rule for "border-bottom: 0" */
-  .menu-item:last-child, .menu-heading:last-child, .tabnav-tab, .border-bottom-0,
-  .suggester li:last-child, .boxed-group > h3, .boxed-group .heading,
-  .boxed-group-list > li:last-of-type, .boxed-group-table tr:last-child td,
-  .commit-build-statuses .dropdown-menu .merge-status-list,
-  .gh-header.pull .gh-header-meta, .timeline-comment-header:only-child,
-  .discussion-item-review-comment:last-child, .dropdown-menu-ne:before,
-  .dropdown-menu-ne:after, .prose-diff > .markdown-body .added,
-  .prose-diff > .markdown-body ins + .added, .prose-diff > .markdown-body ins,
-  .select-menu-list:last-child .select-menu-item:last-child,
-  .select-menu-item.last-visible, .intgrs-dir-intro,
-  .session-authentication .header-logged-out, .billing-addon-items td,
-  .billing-section:last-child, .merge-status-item:last-child,
-  .gh-header-new-pr .gh-header-meta, .branch-group-heading, .branch-summary,
-  .codesearch-results .repo-list-item, .file.open .file-header,
-  .delete-topic-button, .topic-tag-action .add-topic-button,
-  .topic-tag-action .remove-topic-button,
-  .jump-to-suggestions-results-container .navigation-item:last-child,
-  .issue-keyword:hover,
-  .repository-lang-stats ol.repository-lang-stats-numbers li, .news .alert .body,
-  .member-row:last-child, .org-migration-settings-section:last-child,
-  .manage-repo-access-list-item:last-child,
-  .projects-comment-form .comment-form-head,
-  .discussion-item-body .outdated-comment .file-header,
-  .release-entry:last-child, .release-entry,
-  .repo-file-upload-target.is-progress-bar,
-  .repo-file-upload-target.is-uploading, .overall-summary-bottomless,
-  .access-token .credential-authorization-status-item:last-child,
-  .protected-branch-authorized-pushers-table .table-list, .setup-org,
-  .tree-browser tbody tr:last-child td, #user-content-toctitle h2,
-  .border-sm-bottom-0, .border-md-bottom-0, .border-lg-bottom-0, .gist-sort-bar,
-  .gist-quicksearch-results .select-menu-item:last-child {
-    border-bottom: 0 !important;
-  }
   /* auto-generated rule for "box-shadow: 0 0 0 0.2em rgba(3,102,214,0.3)" */
   .btn:focus, .btn.focus, .project-column:focus, .project-column.moving,
   .project-card:focus, .project-card.moving {
@@ -3687,17 +3653,22 @@
     background: rgba(/*[[base-color-rgb]]*/, .8) !important;
   }
   /* rules for the new responsive layout */
+  @media (max-width: 767px) {
+    .release-entry {
+      border-bottom: 1px solid #343434 !important;
+    }
+  }
+  @media (min-width: 768px) {
+    .release-main-section {
+      border-left: 2px solid #343434 !important;
+    }
+  }
   @media (max-width: 1012px) {
     .reponav-wrapper {
       background: #181818 !important;
     }
     .reponav-item.selected {
       background: none !important;
-    }
-  }
-  @media (min-width: 768px) {
-    .release-main-section {
-      border-left: 2px solid #343434 !important;
     }
   }
   @media (min-width: 1013px) {
